Fixed Data Validation Pipeline

--- a/notebook/NCF.ipynb
+++ b/notebook/NCF.ipynb
@@ -2,42 +2,77 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-03-05 19:25:45.555961: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-03-05 19:25:45.621068: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-03-05 19:25:45.680741: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1741173945.736926  228166 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1741173945.752978  228166 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-03-05 19:25:45.870718: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from tensorflow.keras.layers import Input, Embedding, Flatten, Dense, Concatenate ,Dropout # type: ignore\n",
-    "from tensorflow.keras.models import Model # type: ignore\n",
-    "from sklearn.preprocessing import MultiLabelBinarizer\n"
+    "# from sklearn.model_selection import train_test_split\n",
+    "# from tensorflow.keras.layers import Input, Embedding, Flatten, Dense, Concatenate ,Dropout # type: ignore\n",
+    "# from tensorflow.keras.models import Model # type: ignore\n",
+    "# from sklearn.preprocessing import MultiLabelBinarizer\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "movies = pd.read_csv(\"datasets/movies.csv\")\n",
     "ratings = pd.read_csv(\"datasets/ratings.csv\")\n",
-    "tags = pd.read_csv(\"datasets/tags.csv\")"
+    "tags = pd.read_csv(\"datasets/tags.csv\")\n",
+    "link = pd.read_csv(\"datasets/links.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method DataFrame.info of       movieId                                      title  \\\n",
+      "0           1                           Toy Story (1995)   \n",
+      "1           2                             Jumanji (1995)   \n",
+      "2           3                    Grumpier Old Men (1995)   \n",
+      "3           4                   Waiting to Exhale (1995)   \n",
+      "4           5         Father of the Bride Part II (1995)   \n",
+      "...       ...                                        ...   \n",
+      "9737   193581  Black Butler: Book of the Atlantic (2017)   \n",
+      "9738   193583               No Game No Life: Zero (2017)   \n",
+      "9739   193585                               Flint (2017)   \n",
+      "9740   193587        Bungo Stray Dogs: Dead Apple (2018)   \n",
+      "9741   193609        Andrew Dice Clay: Dice Rules (1991)   \n",
+      "\n",
+      "                                           genres  \n",
+      "0     Adventure|Animation|Children|Comedy|Fantasy  \n",
+      "1                      Adventure|Children|Fantasy  \n",
+      "2                                  Comedy|Romance  \n",
+      "3                            Comedy|Drama|Romance  \n",
+      "4                                          Comedy  \n",
+      "...                                           ...  \n",
+      "9737              Action|Animation|Comedy|Fantasy  \n",
+      "9738                     Animation|Comedy|Fantasy  \n",
+      "9739                                        Drama  \n",
+      "9740                             Action|Animation  \n",
+      "9741                                       Comedy  \n",
+      "\n",
+      "[9742 rows x 3 columns]>\n",
+      "Index(['userId', 'movieId', 'rating', 'timestamp'], dtype='object')\n",
+      "Index(['userId', 'movieId', 'tag', 'timestamp'], dtype='object')\n",
+      "Index(['movieId', 'imdbId', 'tmdbId'], dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(movies.describe)\n",
+    "print(ratings.columns)\n",
+    "print(tags.columns)\n",
+    "print(link.columns)"
    ]
   },
   {
