--- a/notebook/NCF.ipynb
+++ b/notebook/NCF.ipynb
@@ -28,51 +28,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<bound method DataFrame.info of       movieId                                      title  \\\n",
-      "0           1                           Toy Story (1995)   \n",
-      "1           2                             Jumanji (1995)   \n",
-      "2           3                    Grumpier Old Men (1995)   \n",
-      "3           4                   Waiting to Exhale (1995)   \n",
-      "4           5         Father of the Bride Part II (1995)   \n",
-      "...       ...                                        ...   \n",
-      "9737   193581  Black Butler: Book of the Atlantic (2017)   \n",
-      "9738   193583               No Game No Life: Zero (2017)   \n",
-      "9739   193585                               Flint (2017)   \n",
-      "9740   193587        Bungo Stray Dogs: Dead Apple (2018)   \n",
-      "9741   193609        Andrew Dice Clay: Dice Rules (1991)   \n",
-      "\n",
-      "                                           genres  \n",
-      "0     Adventure|Animation|Children|Comedy|Fantasy  \n",
-      "1                      Adventure|Children|Fantasy  \n",
-      "2                                  Comedy|Romance  \n",
-      "3                            Comedy|Drama|Romance  \n",
-      "4                                          Comedy  \n",
-      "...                                           ...  \n",
-      "9737              Action|Animation|Comedy|Fantasy  \n",
-      "9738                     Animation|Comedy|Fantasy  \n",
-      "9739                                        Drama  \n",
-      "9740                             Action|Animation  \n",
-      "9741                                       Comedy  \n",
-      "\n",
-      "[9742 rows x 3 columns]>\n",
-      "Index(['userId', 'movieId', 'rating', 'timestamp'], dtype='object')\n",
-      "Index(['userId', 'movieId', 'tag', 'timestamp'], dtype='object')\n",
-      "Index(['movieId', 'imdbId', 'tmdbId'], dtype='object')\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 9742 entries, 0 to 9741\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column   Non-Null Count  Dtype \n",
+      "---  ------   --------------  ----- \n",
+      " 0   movieId  9742 non-null   int64 \n",
+      " 1   title    9742 non-null   object\n",
+      " 2   genres   9742 non-null   object\n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 228.5+ KB\n",
+      "None\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 100836 entries, 0 to 100835\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column     Non-Null Count   Dtype  \n",
+      "---  ------     --------------   -----  \n",
+      " 0   userId     100836 non-null  int64  \n",
+      " 1   movieId    100836 non-null  int64  \n",
+      " 2   rating     100836 non-null  float64\n",
+      " 3   timestamp  100836 non-null  int64  \n",
+      "dtypes: float64(1), int64(3)\n",
+      "memory usage: 3.1 MB\n",
+      "None\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3683 entries, 0 to 3682\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column     Non-Null Count  Dtype \n",
+      "---  ------     --------------  ----- \n",
+      " 0   userId     3683 non-null   int64 \n",
+      " 1   movieId    3683 non-null   int64 \n",
+      " 2   tag        3683 non-null   object\n",
+      " 3   timestamp  3683 non-null   int64 \n",
+      "dtypes: int64(3), object(1)\n",
+      "memory usage: 115.2+ KB\n",
+      "None\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 9742 entries, 0 to 9741\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column   Non-Null Count  Dtype  \n",
+      "---  ------   --------------  -----  \n",
+      " 0   movieId  9742 non-null   int64  \n",
+      " 1   imdbId   9742 non-null   int64  \n",
+      " 2   tmdbId   9734 non-null   float64\n",
+      "dtypes: float64(1), int64(2)\n",
+      "memory usage: 228.5 KB\n",
+      "None\n"
      ]
     }
    ],
    "source": [
-    "print(movies.describe)\n",
-    "print(ratings.columns)\n",
-    "print(tags.columns)\n",
-    "print(link.columns)"
+    "print(movies.info())\n",
+    "print(ratings.info())\n",
+    "print(tags.info())\n",
+    "print(link.info())"
    ]
   },
   {
