Fixed Duplicate User ID & Timestamp Issue

--- a/notebook/NCF.ipynb
+++ b/notebook/NCF.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "# from sklearn.model_selection import train_test_split\n",
-    "# from tensorflow.keras.layers import Input, Embedding, Flatten, Dense, Concatenate ,Dropout # type: ignore\n",
-    "# from tensorflow.keras.models import Model # type: ignore\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from tensorflow.keras.layers import Input, Embedding, Flatten, Dense, Concatenate ,Dropout # type: ignore\n",
+    "from tensorflow.keras.models import Model # type: ignore\n",
     "# from sklearn.preprocessing import MultiLabelBinarizer\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,22 +123,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>title</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>tag</th>\n",
+       "      <th>content</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Toy Story (1995)</td>\n",
+       "      <td>adventure,animation,children,comedy,fantasy</td>\n",
+       "      <td>pixar, pixar, fun</td>\n",
+       "      <td>adventure,animation,children,comedy,fantasy,pi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Jumanji (1995)</td>\n",
+       "      <td>adventure,children,fantasy</td>\n",
+       "      <td>fantasy, magic,board,game, robin,williams, game</td>\n",
+       "      <td>adventure,children,fantasy,fantasy, magic,boar...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Grumpier Old Men (1995)</td>\n",
+       "      <td>comedy,romance</td>\n",
+       "      <td>moldy, old</td>\n",
+       "      <td>comedy,romance,moldy, old</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Father of the Bride Part II (1995)</td>\n",
+       "      <td>comedy</td>\n",
+       "      <td>pregnancy, remake</td>\n",
+       "      <td>comedy,pregnancy, remake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Sabrina (1995)</td>\n",
+       "      <td>comedy,romance</td>\n",
+       "      <td>remake</td>\n",
+       "      <td>comedy,romance,remake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1567</th>\n",
+       "      <td>183611</td>\n",
+       "      <td>Game Night (2018)</td>\n",
+       "      <td>action,comedy,crime,horror</td>\n",
+       "      <td>comedy, funny, rachel,mcadams</td>\n",
+       "      <td>action,comedy,crime,horror,comedy, funny, rach...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1568</th>\n",
+       "      <td>184471</td>\n",
+       "      <td>Tomb Raider (2018)</td>\n",
+       "      <td>action,adventure,fantasy</td>\n",
+       "      <td>adventure, alicia,vikander, video,game,adaptation</td>\n",
+       "      <td>action,adventure,fantasy,adventure, alicia,vik...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1569</th>\n",
+       "      <td>187593</td>\n",
+       "      <td>Deadpool 2 (2018)</td>\n",
+       "      <td>action,comedy,sci-fi</td>\n",
+       "      <td>josh,brolin, ryan,reynolds, sarcasm</td>\n",
+       "      <td>action,comedy,sci-fi,josh,brolin, ryan,reynold...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1570</th>\n",
+       "      <td>187595</td>\n",
+       "      <td>Solo: A Star Wars Story (2018)</td>\n",
+       "      <td>action,adventure,children,sci-fi</td>\n",
+       "      <td>emilia,clarke, star,wars</td>\n",
+       "      <td>action,adventure,children,sci-fi,emilia,clarke...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1571</th>\n",
+       "      <td>193565</td>\n",
+       "      <td>Gintama: The Movie (2010)</td>\n",
+       "      <td>action,animation,comedy,sci-fi</td>\n",
+       "      <td>anime, comedy, gintama, remaster</td>\n",
+       "      <td>action,animation,comedy,sci-fi,anime, comedy, ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1572 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      movieId                               title  \\\n",
+       "0           1                    Toy Story (1995)   \n",
+       "1           2                      Jumanji (1995)   \n",
+       "2           3             Grumpier Old Men (1995)   \n",
+       "3           5  Father of the Bride Part II (1995)   \n",
+       "4           7                      Sabrina (1995)   \n",
+       "...       ...                                 ...   \n",
+       "1567   183611                   Game Night (2018)   \n",
+       "1568   184471                  Tomb Raider (2018)   \n",
+       "1569   187593                   Deadpool 2 (2018)   \n",
+       "1570   187595      Solo: A Star Wars Story (2018)   \n",
+       "1571   193565           Gintama: The Movie (2010)   \n",
+       "\n",
+       "                                           genres  \\\n",
+       "0     adventure,animation,children,comedy,fantasy   \n",
+       "1                      adventure,children,fantasy   \n",
+       "2                                  comedy,romance   \n",
+       "3                                          comedy   \n",
+       "4                                  comedy,romance   \n",
+       "...                                           ...   \n",
+       "1567                   action,comedy,crime,horror   \n",
+       "1568                     action,adventure,fantasy   \n",
+       "1569                         action,comedy,sci-fi   \n",
+       "1570             action,adventure,children,sci-fi   \n",
+       "1571               action,animation,comedy,sci-fi   \n",
+       "\n",
+       "                                                    tag  \\\n",
+       "0                                     pixar, pixar, fun   \n",
+       "1       fantasy, magic,board,game, robin,williams, game   \n",
+       "2                                            moldy, old   \n",
+       "3                                     pregnancy, remake   \n",
+       "4                                                remake   \n",
+       "...                                                 ...   \n",
+       "1567                      comedy, funny, rachel,mcadams   \n",
+       "1568  adventure, alicia,vikander, video,game,adaptation   \n",
+       "1569                josh,brolin, ryan,reynolds, sarcasm   \n",
+       "1570                           emilia,clarke, star,wars   \n",
+       "1571                   anime, comedy, gintama, remaster   \n",
+       "\n",
+       "                                                content  \n",
+       "0     adventure,animation,children,comedy,fantasy,pi...  \n",
+       "1     adventure,children,fantasy,fantasy, magic,boar...  \n",
+       "2                             comedy,romance,moldy, old  \n",
+       "3                              comedy,pregnancy, remake  \n",
+       "4                                 comedy,romance,remake  \n",
+       "...                                                 ...  \n",
+       "1567  action,comedy,crime,horror,comedy, funny, rach...  \n",
+       "1568  action,adventure,fantasy,adventure, alicia,vik...  \n",
+       "1569  action,comedy,sci-fi,josh,brolin, ryan,reynold...  \n",
+       "1570  action,adventure,children,sci-fi,emilia,clarke...  \n",
+       "1571  action,animation,comedy,sci-fi,anime, comedy, ...  \n",
+       "\n",
+       "[1572 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "movies['content'] = movies['genres'] + ',' + movies['tag']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mlb = MultiLabelBinarizer()\n",
-    "genres_encoded = pd.DataFrame(mlb.fit_transform(movies['content']), columns=mlb.classes_, index=movies.index)\n",
-    "movies = pd.concat([movies, genres_encoded], axis=1)\n"
+    "movies"
    ]
   },
   {
@@ -147,12 +319,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "movies_with_ratings = pd.merge(movies,ratings,on='movieId')"
+    "movies['content'] = movies['genres'] + ',' + movies['tag']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'MultiLabelBinarizer' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m mlb = \u001b[43mMultiLabelBinarizer\u001b[49m()\n\u001b[32m      2\u001b[39m genres_encoded = pd.DataFrame(mlb.fit_transform(movies[\u001b[33m'\u001b[39m\u001b[33mcontent\u001b[39m\u001b[33m'\u001b[39m]), columns=mlb.classes_, index=movies.index)\n\u001b[32m      3\u001b[39m movies = pd.concat([movies, genres_encoded], axis=\u001b[32m1\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'MultiLabelBinarizer' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "mlb = MultiLabelBinarizer()\n",
+    "genres_encoded = pd.DataFrame(mlb.fit_transform(movies['content']), columns=mlb.classes_, index=movies.index)\n",
+    "movies = pd.concat([movies, genres_encoded], axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_with_ratings = pd.merge(movies,ratings,on='movieId')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['movieId', 'title', 'genres', 'tag', 'content', 'userId', 'rating',\n",
+       "       'timestamp'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies_with_ratings.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
