--- a/notebook/NCF.ipynb
+++ b/notebook/NCF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
        "[3683 rows x 6 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
        "[48287 rows x 54 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -934,8 +934,8 @@
        "      <td>964982703</td>\n",
        "      <td>1995.0</td>\n",
        "      <td>0.001320</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.001320</td>\n",
+       "      <td>0.977262</td>\n",
+       "      <td>0.001290</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -958,8 +958,8 @@
        "      <td>964981247</td>\n",
        "      <td>1995.0</td>\n",
        "      <td>0.001320</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.001320</td>\n",
+       "      <td>0.977262</td>\n",
+       "      <td>0.001290</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -982,8 +982,8 @@
        "      <td>964983815</td>\n",
        "      <td>1995.0</td>\n",
        "      <td>0.001320</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.001320</td>\n",
+       "      <td>0.977262</td>\n",
+       "      <td>0.001290</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1006,8 +1006,8 @@
        "      <td>964982931</td>\n",
        "      <td>1995.0</td>\n",
        "      <td>0.001320</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.001320</td>\n",
+       "      <td>0.977262</td>\n",
+       "      <td>0.001290</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1030,8 +1030,8 @@
        "      <td>964980868</td>\n",
        "      <td>1996.0</td>\n",
        "      <td>0.001320</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.001320</td>\n",
+       "      <td>0.978240</td>\n",
+       "      <td>0.001292</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1078,8 +1078,8 @@
        "      <td>1493848024</td>\n",
        "      <td>2016.0</td>\n",
        "      <td>0.601280</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.601280</td>\n",
+       "      <td>0.998002</td>\n",
+       "      <td>0.600079</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>48283</th>\n",
@@ -1102,8 +1102,8 @@
        "      <td>1493848362</td>\n",
        "      <td>2016.0</td>\n",
        "      <td>0.601282</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.601282</td>\n",
+       "      <td>0.998002</td>\n",
+       "      <td>0.600081</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>48284</th>\n",
@@ -1126,8 +1126,8 @@
        "      <td>1493845631</td>\n",
        "      <td>2016.0</td>\n",
        "      <td>0.601263</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.601263</td>\n",
+       "      <td>0.998002</td>\n",
+       "      <td>0.600062</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>48285</th>\n",
@@ -1150,8 +1150,8 @@
        "      <td>1493850091</td>\n",
        "      <td>2017.0</td>\n",
        "      <td>0.601294</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.601294</td>\n",
+       "      <td>0.999000</td>\n",
+       "      <td>0.600693</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>48286</th>\n",
@@ -1174,8 +1174,8 @@
        "      <td>1493846352</td>\n",
        "      <td>2017.0</td>\n",
        "      <td>0.601268</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.601268</td>\n",
+       "      <td>0.999000</td>\n",
+       "      <td>0.600667</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1249,22 +1249,22 @@
        "48286  0  1  0     609     5.0  1493846352        2017.0           0.601268   \n",
        "\n",
        "       year_decay_weight  combined_decay  \n",
-       "0                    1.0        0.001320  \n",
-       "1                    1.0        0.001320  \n",
-       "2                    1.0        0.001320  \n",
-       "3                    1.0        0.001320  \n",
-       "4                    1.0        0.001320  \n",
+       "0               0.977262        0.001290  \n",
+       "1               0.977262        0.001290  \n",
+       "2               0.977262        0.001290  \n",
+       "3               0.977262        0.001290  \n",
+       "4               0.978240        0.001292  \n",
        "...                  ...             ...  \n",
-       "48282                1.0        0.601280  \n",
-       "48283                1.0        0.601282  \n",
-       "48284                1.0        0.601263  \n",
-       "48285                1.0        0.601294  \n",
-       "48286                1.0        0.601268  \n",
+       "48282           0.998002        0.600079  \n",
+       "48283           0.998002        0.600081  \n",
+       "48284           0.998002        0.600062  \n",
+       "48285           0.999000        0.600693  \n",
+       "48286           0.999000        0.600667  \n",
        "\n",
        "[48287 rows x 58 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1275,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1287,27 +1287,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(38629, 58)"
+       "movieId                int64\n",
+       "title                 object\n",
+       "genres                object\n",
+       "tag                   object\n",
+       "content               object\n",
+       "                       int64\n",
+       "!                      int64\n",
+       "\"                      int64\n",
+       "&                      int64\n",
+       "'                      int64\n",
+       "(                      int64\n",
+       ")                      int64\n",
+       ",                      int64\n",
+       "-                      int64\n",
+       ".                      int64\n",
+       "/                      int64\n",
+       "0                      int64\n",
+       "1                      int64\n",
+       "2                      int64\n",
+       "5                      int64\n",
+       "6                      int64\n",
+       "7                      int64\n",
+       "8                      int64\n",
+       "9                      int64\n",
+       ":                      int64\n",
+       "a                      int64\n",
+       "b                      int64\n",
+       "c                      int64\n",
+       "d                      int64\n",
+       "e                      int64\n",
+       "f                      int64\n",
+       "g                      int64\n",
+       "h                      int64\n",
+       "i                      int64\n",
+       "j                      int64\n",
+       "k                      int64\n",
+       "l                      int64\n",
+       "m                      int64\n",
+       "n                      int64\n",
+       "o                      int64\n",
+       "p                      int64\n",
+       "q                      int64\n",
+       "r                      int64\n",
+       "s                      int64\n",
+       "t                      int64\n",
+       "u                      int64\n",
+       "v                      int64\n",
+       "w                      int64\n",
+       "x                      int64\n",
+       "y                      int64\n",
+       "z                      int64\n",
+       "userId                 int64\n",
+       "rating               float64\n",
+       "timestamp              int64\n",
+       "release_year         float64\n",
+       "time_decay_weight    float64\n",
+       "year_decay_weight    float64\n",
+       "combined_decay       float64\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train.shape"
+    "train.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1320,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1328,10 +1386,10 @@
      "evalue": "name 'Input' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[53]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m user_input = \u001b[43mInput\u001b[49m(shape=(\u001b[32m1\u001b[39m,), name=\u001b[33m'\u001b[39m\u001b[33muser_input\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      2\u001b[39m item_input = Input(shape=(\u001b[32m1\u001b[39m,), name=\u001b[33m'\u001b[39m\u001b[33mitem_input\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      3\u001b[39m genre_input = Input(shape=(\u001b[38;5;28mlen\u001b[39m(mlb.classes_),), name=\u001b[33m'\u001b[39m\u001b[33mgenre_input\u001b[39m\u001b[33m'\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'Input' is not defined"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[26], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m user_input \u001b[38;5;241m=\u001b[39m \u001b[43mInput\u001b[49m(shape\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m1\u001b[39m,), name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124muser_input\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      2\u001b[0m item_input \u001b[38;5;241m=\u001b[39m Input(shape\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m1\u001b[39m,), name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mitem_input\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m genre_input \u001b[38;5;241m=\u001b[39m Input(shape\u001b[38;5;241m=\u001b[39m(\u001b[38;5;28mlen\u001b[39m(mlb\u001b[38;5;241m.\u001b[39mclasses_),), name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgenre_input\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Input' is not defined"
      ]
     }
    ],
@@ -1580,7 +1638,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -1594,7 +1652,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
